instead of by the at character.
Refactored browser expand's command to always include blank lines
around expanded entries. Remove the blanks when collapsing (and
leaving keys next to each other).

*****

Added meta content into expanded entries (shown above) content.


*****  Fri Sep 17 17:38:21 -03 2021  *****

Added LastKeyCompleter and LastKeySuggestCompleter to implement
a dynamic autocomplete according to the latest key found in the
input text.
Added BM_HISTORY_TAGS constant to keep history of tag searches.

*****

Changed default tags value from None to [].

*****

Implemented cli_tag() and prompt_search_tags() to enable
adding/removing tags from the command line.
Some documentation is TBD.


*****  Fri Sep 24 22:03:53 -03 2021  *****

Updated bm.search() to include searches by tag.
Testing is TBD.

*****

Implemented u.DynamicKeywordCompleter()
and u.DynamicKeywordCompleter() to improve and replace on the
auto completer searches, providing tab-completion options after keys
which can be colon-ended or double quote-ended.


*****  Mon Sep 27 11:30:13 -03 2021  *****

Completely refactored cli_search() function in __main__.py
enabling searches by tag and upgrading the completers.
Removed u.search_keys, no longer used.


*****  Tue Nov 30 23:56:37 CET 2021  *****

Enabled searches by tag in the browser.
The 't' keybinding launches the tag-search prompt, after the user
input, the main text will display only the entries containing the
requested tag(s).  If there is not matching entries, display all
entries of the database.


*****  Wed Dec 1 21:43:53 CET 2021  *****

In the browser, hide the info_bar when searching for tags,
(such that the search bar is at the bottom and the tab completions
are always displayed above it).

*****

Fixed search word completions (display only on-screen entries).
This commit should complete the new browser tag capabilities
proposed in #75 (only bibm ads-add tagging left to update)
